WeetBot command responses show Emotes

--- a/views/stream/commands.html
+++ b/views/stream/commands.html
@@ -32,6 +32,7 @@
 
 	{% include "../../parts/footer.html" %}
 
+	<script src="/js/emotes.js"></script>
 	<script src="/js/script.js"></script>
 </body>
 </html>
