--- a/views/index.html
+++ b/views/index.html
@@ -21,11 +21,11 @@
 						<p>
 							<!-- TODO: Move this to Redis -->
 My name is <b>Timothy Cole</b> or as my parents refer to me, tech support but you can call me <b>Tim</b>!<br><br>
-I'm a <b>20 year old</b>, self-taught, full-stack web developer living on the coastal side of <b>North Carolina</b>.<br><br>
+I'm a <b>21 year old</b>, self-taught, full-stack web developer living on the coastal side of <b>North Carolina</b>.<br><br>
 When I was 10 years old I fell in love with computers. I thought they were so neat that I wanted to become the CEO of Intel one day! When I was 13 I realized how intriguing websites are so I started to tinker with inspect element. It wasn't until then when I realized what I wanted to do with my life. A few months passed and I was still learning and investing my time away.<br><br>
 <i>EUREKA!</i> - Finally, by the age of 14, I created my very first website! All front-end and far from perfect, but it was mine that's all that mattered. As time passed, I completed many projects, gradually becoming more educated and working harder as ever.<br><br>
 After hating school for my entire life, when I was 17 in freshmen year, I decided to drop out to pursue my career as a web developer.<br><br>
-Now I'm fluent in CSS, HTML, JS, NodeJS, PHP and Java (Android Development) with a touch of Python, currently working as QA and Development at <a href="http://socialblade.com/info/team" target="_blank">SocialBlade</a>.
+Now I'm fluent in CSS, HTML, JS, Golang, NodeJS, and PHP with a touch of Python and Java (Android Development), currently working as QA and Development at <a href="http://socialblade.com/info/team" target="_blank">SocialBlade</a>.
 						</p>
 					</div>
 				</div>
