--- a/views/stream/index.html
+++ b/views/stream/index.html
@@ -34,7 +34,6 @@
 	<tc-body>
 		<tc-container>
 			<div id="video"></div>
-			<iframe src="https://twitch.tv/[[ api.stream.channel.name ]]/chat" frameborder="0" scrolling="no" class="chat"></iframe>
 		</tc-container>
 	</tc-body>
 
@@ -44,7 +43,7 @@
 		meta.followers = ("[[ api.stream.channel.followers ]]" === "" ? -1 : [[ api.stream.channel.followers ]]);
 		meta.viewers = ("[[ api.stream.viewers ]]" === "" ? "Offline" : "[[ api.stream.viewers ]]");
 	</script>
-	<script src="https://player.twitch.tv/js/embed/v1.js"></script>
+	<script src="https://embed.twitch.tv/embed/v1.js"></script>
 	<script src="/js/script.js"></script>
 </body>
 </html>
